src/test/deca/context/valid/override-method.deca
// Description:
//    override de méthode
//
// Resultats:
//
//
// Historique:
//    cree le 16/01/2023

class A {
    void get(int a){}
}

class B extends A {
    void get(int b){}
}
