src/test/deca/context/invalid/override-method-wrong-sig-2.deca
// Description:
//    override de méthode avec une signature différente (pas le même nombre d'arguments)
//
// Resultats:
//    Ligne 15: The method "get" doesn't have the same signature as the method defined it the superclass (rule 2.7)
//
// Historique:
//    cree le 16/01/2023

class A {
    void get(int a){}
}

class B extends A {
    void get(int a, int b){}
}
